tests/baddatacylpolar.out
./baddatacylpolar.svx:5:24: error: Reading "foo" not allowed in data style "cylpolar"
 *data cylpolar from to foo
                        ^~~
./baddatacylpolar.svx:12:49: error: Reading "foo" not allowed in data style "cylpolar"
 *data cylpolar from to tape compass depthchange foo
                                                 ^~~
./baddatacylpolar.svx:15:49: error: Reading "f0o" not allowed in data style "cylpolar"
 *data cylpolar from to tape compass depthchange f0o
                                                 ^~~
./baddatacylpolar.svx:18:7: error: Data style "cylp0lar" unknown
 *data cylp0lar from to tape compass depthchange
       ^~~~~~~~
./baddatacylpolar.svx:20:30: error: NEWLINE can't be the last reading
 *data cylpolar station depth newline
                              ^~~~~~~
./baddatacylpolar.svx:22:40: error: NEWLINE can't be the last reading
 *data cylpolar station depth ignoreall newline
                                        ^~~~~~~
./baddatacylpolar.svx:24:55: error: NEWLINE can only be preceded by STATION, DEPTH, and COUNT
 *data cylpolar from to tape compass fromdepth todepth newline
                                                       ^~~~~~~
./baddatacylpolar.svx:26:65: error: NEWLINE can only be preceded by STATION, DEPTH, and COUNT
 *data cylpolar from to tape compass fromdepth todepth ignoreall newline
                                                                 ^~~~~~~
./baddatacylpolar.svx:28:16: error: NEWLINE can't be the first reading
 *data cylpolar newline from to tape compass fromdepth todepth
                ^~~~~~~
./baddatacylpolar.svx:30: error: Interleaved readings, but no NEWLINE
 *data cylpolar station tape compass fromdepth todepth

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 2 survey stations, joined by 1 leg.
There are 0 loops.
Total length of survey legs =    5.83m (   5.83m adjusted)
Total plan length of survey legs =    3.00m
Total vertical length of survey legs =    5.00m
Vertical range = 5.00m (from 3 at 5.00m to 1 at 0.00m)
North-South range = 2.99m (from 3 at 2.99m to 1 at 0.00m)
East-West range = 0.26m (from 3 at 0.26m to 1 at 0.00m)

There were 0 warning(s) and 10 error(s) - no output files produced.
