tests/baddatacylpolar.svx
; pos=fail warn=0 error=10
*fix 1 reference 0 0 0
; this next line should ignore the data until the next *data - until
; 0.99pre7 it would switch to style cylpolar and cause an internal error
*data cylpolar from to foo
1 2 3.00 004 05 06
; Test handling of a comment right after an ignored reading.  Regression
; test for bug fixed in 1.4.10.
*data cylpolar from to tape compass depthchange ignore
1 3 3.00 005 05 06; comment
; Check final token being bad gives an error (bug fixed in 1.4.11).
*data cylpolar from to tape compass depthchange foo
1 4 2.00 270 05
; Check tokens include numerics
*data cylpolar from to tape compass depthchange f0o
1 5 1.00 090 00
; An unknown data style should ignore data that follows.
*data cylp0lar from to tape compass depthchange
1 q 2 90 0
*data cylpolar station depth newline
1 r 2 90 0
*data cylpolar station depth ignoreall newline
1 s 2 90 0
*data cylpolar from to tape compass fromdepth todepth newline
1 t 2 90 0
*data cylpolar from to tape compass fromdepth todepth ignoreall newline
1 u 2 90 0
*data cylpolar newline from to tape compass fromdepth todepth
1 v 2 90 0
*data cylpolar station tape compass fromdepth todepth
1 w 2 90 0
